CompiladorGyh/src/analisadores/gyhLangParser.java
// Generated from .\gyhLang.g4 by ANTLR 4.7.2

    // Pacote onde serão salvos os analisadores
    package analisadores;
    // Bibliotecas necessárias
    import java.util.ArrayList;
    import comandos.*;
    import main.GyhProgram;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gyhLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMENTARIO=2, PCDEC=3, PCPROG=4, PCINT=5, PCLER=6, PCREAL=7, PCIMPRIMIR=8, 
		PCSE=9, PCENTAO=10, PCENQTO=11, PCINI=12, PCFIM=13, PCSENAO=14, CADEIA=15, 
		VAR=16, OPARITSOMA=17, OPARITSUB=18, OPARITMULT=19, OPARITDIV=20, OPBOOLE=21, 
		OPBOOLOU=22, OPRELIGUAL=23, OPRELDIF=24, OPRELMAIORIGUAL=25, OPRELMENORIGUAL=26, 
		OPRELMAIOR=27, OPRELMENOR=28, ATRIB=29, DELIM=30, ABREPAR=31, FECHAPAR=32, 
		NUMREAL=33, NUMINT=34;
	public static final int
		RULE_programa = 0, RULE_declaracao = 1, RULE_tipoVar = 2, RULE_expressaoAritmetica = 3, 
		RULE_sentencaAritmetica = 4, RULE_termoAritmetico = 5, RULE_proposicaoAritmetica = 6, 
		RULE_fatorAritmetico = 7, RULE_expressaoRelacional = 8, RULE_termoRelacional = 9, 
		RULE_comando = 10, RULE_comandoAtribuicao = 11, RULE_comandoEntrada = 12, 
		RULE_comandoSaida = 13, RULE_tipoSaida = 14, RULE_comandoCondicao = 15, 
		RULE_comandoRepeticao = 16, RULE_subAlgoritmo = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracao", "tipoVar", "expressaoAritmetica", "sentencaAritmetica", 
			"termoAritmetico", "proposicaoAritmetica", "fatorAritmetico", "expressaoRelacional", 
			"termoRelacional", "comando", "comandoAtribuicao", "comandoEntrada", 
			"comandoSaida", "tipoSaida", "comandoCondicao", "comandoRepeticao", "subAlgoritmo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'DEC'", "'PROG'", "'INT'", "'LER'", "'REAL'", "'IMPRIMIR'", 
			"'SE'", "'ENTAO'", "'ENQTO'", "'INI'", "'FIM'", "'SENAO'", null, null, 
			"'+'", "'-'", "'*'", "'/'", "'E'", "'OU'", "'=='", "'!='", "'>='", "'<='", 
			"'>'", "'<'", "':='", "':'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMENTARIO", "PCDEC", "PCPROG", "PCINT", "PCLER", "PCREAL", 
			"PCIMPRIMIR", "PCSE", "PCENTAO", "PCENQTO", "PCINI", "PCFIM", "PCSENAO", 
			"CADEIA", "VAR", "OPARITSOMA", "OPARITSUB", "OPARITMULT", "OPARITDIV", 
			"OPBOOLE", "OPBOOLOU", "OPRELIGUAL", "OPRELDIF", "OPRELMAIORIGUAL", "OPRELMENORIGUAL", 
			"OPRELMAIOR", "OPRELMENOR", "ATRIB", "DELIM", "ABREPAR", "FECHAPAR", 
			"NUMREAL", "NUMINT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gyhLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    
	    /**
	    *   Tabela de símbolos para manter as variáveis declaradas no programa fonte.
	    */
	    private TabelaSimbolos varTabela = new TabelaSimbolos();
	    /**
	    *   Strings auxiliares para salvar o nome das variáveis, expressões aritméticas
	    *   e booleanas, respectivamente.
	    */
	    private String varAtrib,varExp,varCond;
	    /**
	    *   Array de inteiros usados para auxiliar na identificação dos comandos pertencentes
	    *   a diferentes escopos de subalgoritmos.
	    */
	    private ArrayList<Integer> indices = new ArrayList<>();
	    /**
	    *   Array de comandos usados para concatenar os comandos pertencente a um escopo de
	    *   subalgoritmo.
	    */
	    private ArrayList<Comando> listSub;
	    /**
	    *   Instancias de comando auxiliares, para armazenar os comandos a serem executados
	    *   em caminhos condicionais e de repetição.
	    */
	    private Comando cmdTrue, cmdFalse;
	    /**
	    * Variavel para geração de código.
	    */
	    private GyhProgram program = new GyhProgram();
	    /**
	    * Array de comandos que manterá os comandos na ordem em que aparecem no programa fonte.  
	    */
	    private ArrayList<Comando> listCmd = new ArrayList<>();
	    /**
	    * Variavel para verificação semântica, se o tipo de dado que uma variável está recebendo é correto.
	    */
	    private int eVarInt = -1;
	    //============================================//
	    
	    // Delcação de funções
	    
	    /** 
	    *   Método utilizado para adicionar um novo símbolo à tabela de símbolos.
	    *   @param nome O nome da variável.
	    *   @param tipo O tipo da variável.
	    */
	    public void addTabela(String nome, String tipo){
	        if(varTabela.contemChave(nome)){
	            System.err.println("Erro Semântico - Variável já declarada com esse nome: " + nome);
	        }else{
	            varTabela.add(new Simbolo(nome,tipo));
	        }// if-else
	    }// addTabela


	public gyhLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public List<TerminalNode> DELIM() { return getTokens(gyhLangParser.DELIM); }
		public TerminalNode DELIM(int i) {
			return getToken(gyhLangParser.DELIM, i);
		}
		public TerminalNode PCDEC() { return getToken(gyhLangParser.PCDEC, 0); }
		public TerminalNode PCPROG() { return getToken(gyhLangParser.PCPROG, 0); }
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(DELIM);
			setState(37);
			match(PCDEC);
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38);
				declaracao();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VAR );
			setState(43);
			match(DELIM);
			setState(44);
			match(PCPROG);
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(45);
				comando();
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PCLER) | (1L << PCIMPRIMIR) | (1L << PCSE) | (1L << PCENQTO) | (1L << PCINI) | (1L << VAR))) != 0) );

			    // Como terminamos de analisar o código, vamos gerar o código
			    program.setVarTabela(varTabela);
			    program.setListCmd(listCmd);
			    program.generateTarget();

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(gyhLangParser.VAR, 0); }
		public TerminalNode DELIM() { return getToken(gyhLangParser.DELIM, 0); }
		public TipoVarContext tipoVar() {
			return getRuleContext(TipoVarContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).exitDeclaracao(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(VAR);
			setState(53);
			match(DELIM);
			setState(54);
			tipoVar();
			 
			    addTabela(_input.LT(-3).getText(), _input.LT(-1).getText());

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoVarContext extends ParserRuleContext {
		public TerminalNode PCINT() { return getToken(gyhLangParser.PCINT, 0); }
		public TerminalNode PCREAL() { return getToken(gyhLangParser.PCREAL, 0); }
		public TipoVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).enterTipoVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).exitTipoVar(this);
		}
	}

	public final TipoVarContext tipoVar() throws RecognitionException {
		TipoVarContext _localctx = new TipoVarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tipoVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_la = _input.LA(1);
			if ( !(_la==PCINT || _la==PCREAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoAritmeticaContext extends ParserRuleContext {
		public TermoAritmeticoContext termoAritmetico() {
			return getRuleContext(TermoAritmeticoContext.class,0);
		}
		public SentencaAritmeticaContext sentencaAritmetica() {
			return getRuleContext(SentencaAritmeticaContext.class,0);
		}
		public ExpressaoAritmeticaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoAritmetica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).enterExpressaoAritmetica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).exitExpressaoAritmetica(this);
		}
	}

	public final ExpressaoAritmeticaContext expressaoAritmetica() throws RecognitionException {
		ExpressaoAritmeticaContext _localctx = new ExpressaoAritmeticaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expressaoAritmetica);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			termoAritmetico();
			setState(60);
			sentencaAritmetica();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentencaAritmeticaContext extends ParserRuleContext {
		public TermoAritmeticoContext termoAritmetico() {
			return getRuleContext(TermoAritmeticoContext.class,0);
		}
		public ProposicaoAritmeticaContext proposicaoAritmetica() {
			return getRuleContext(ProposicaoAritmeticaContext.class,0);
		}
		public TerminalNode OPARITSOMA() { return getToken(gyhLangParser.OPARITSOMA, 0); }
		public TerminalNode OPARITSUB() { return getToken(gyhLangParser.OPARITSUB, 0); }
		public SentencaAritmeticaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencaAritmetica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).enterSentencaAritmetica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).exitSentencaAritmetica(this);
		}
	}

	public final SentencaAritmeticaContext sentencaAritmetica() throws RecognitionException {
		SentencaAritmeticaContext _localctx = new SentencaAritmeticaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentencaAritmetica);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPARITSOMA:
			case OPARITSUB:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OPARITSOMA:
					{
					setState(62);
					match(OPARITSOMA);
					varExp += "+";
					}
					break;
				case OPARITSUB:
					{
					setState(64);
					match(OPARITSUB);
					varExp += "-";
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(68);
				termoAritmetico();
				setState(69);
				proposicaoAritmetica();
				}
				break;
			case EOF:
			case PCLER:
			case PCIMPRIMIR:
			case PCSE:
			case PCENTAO:
			case PCENQTO:
			case PCINI:
			case PCFIM:
			case PCSENAO:
			case VAR:
			case OPBOOLE:
			case OPBOOLOU:
			case OPRELIGUAL:
			case OPRELDIF:
			case OPRELMAIORIGUAL:
			case OPRELMENORIGUAL:
			case OPRELMAIOR:
			case OPRELMENOR:
			case FECHAPAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermoAritmeticoContext extends ParserRuleContext {
		public FatorAritmeticoContext fatorAritmetico() {
			return getRuleContext(FatorAritmeticoContext.class,0);
		}
		public ProposicaoAritmeticaContext proposicaoAritmetica() {
			return getRuleContext(ProposicaoAritmeticaContext.class,0);
		}
		public TermoAritmeticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termoAritmetico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).enterTermoAritmetico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).exitTermoAritmetico(this);
		}
	}

	public final TermoAritmeticoContext termoAritmetico() throws RecognitionException {
		TermoAritmeticoContext _localctx = new TermoAritmeticoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_termoAritmetico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			fatorAritmetico();
			setState(75);
			proposicaoAritmetica();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProposicaoAritmeticaContext extends ParserRuleContext {
		public FatorAritmeticoContext fatorAritmetico() {
			return getRuleContext(FatorAritmeticoContext.class,0);
		}
		public ProposicaoAritmeticaContext proposicaoAritmetica() {
			return getRuleContext(ProposicaoAritmeticaContext.class,0);
		}
		public TerminalNode OPARITMULT() { return getToken(gyhLangParser.OPARITMULT, 0); }
		public TerminalNode OPARITDIV() { return getToken(gyhLangParser.OPARITDIV, 0); }
		public ProposicaoAritmeticaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposicaoAritmetica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).enterProposicaoAritmetica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).exitProposicaoAritmetica(this);
		}
	}

	public final ProposicaoAritmeticaContext proposicaoAritmetica() throws RecognitionException {
		ProposicaoAritmeticaContext _localctx = new ProposicaoAritmeticaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_proposicaoAritmetica);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OPARITMULT:
					{
					setState(77);
					match(OPARITMULT);
					varExp += "*";
					}
					break;
				case OPARITDIV:
					{
					setState(79);
					match(OPARITDIV);
					varExp += "/";
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(83);
				fatorAritmetico();
				setState(84);
				proposicaoAritmetica();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FatorAritmeticoContext extends ParserRuleContext {
		public TerminalNode NUMINT() { return getToken(gyhLangParser.NUMINT, 0); }
		public TerminalNode NUMREAL() { return getToken(gyhLangParser.NUMREAL, 0); }
		public TerminalNode VAR() { return getToken(gyhLangParser.VAR, 0); }
		public TerminalNode ABREPAR() { return getToken(gyhLangParser.ABREPAR, 0); }
		public ExpressaoAritmeticaContext expressaoAritmetica() {
			return getRuleContext(ExpressaoAritmeticaContext.class,0);
		}
		public TerminalNode FECHAPAR() { return getToken(gyhLangParser.FECHAPAR, 0); }
		public FatorAritmeticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fatorAritmetico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).enterFatorAritmetico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhLangListener ) ((gyhLangListener)listener).exitFatorAritmetico(this);
		}
	}

	public final FatorAritmeticoContext fatorAritmetico() throws RecognitionException {
		FatorAritmeticoContext _localctx = new FatorAritmeticoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fatorAritmetico);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(NUMINT);
				varExp += _input.LT(-1).getText();
				}
				break;
			case NUMREAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(NUMREAL);

				    String numReal = _input.LT(-1).getText();
				    if(numReal.indexOf(".")+9 < numReal.length()){
				        System.err.println("\nErro Semântico - Número real com mais de 8 casas decimais.\n" +
				                            "O excedente de casas decimais foi desconsiderado!\n"+
				                            "Num: " + numReal + "\n");
				        numReal = numReal.substring(0,numReal.indexOf(".")+9);
				    }// if
				    
				    if(eVarInt == 1) System.err.println("\nErro Semântico - Tentativa de atribuição de dado real " + 
				                                numReal + " para variável inteira " + varAtrib + ".\n"+
				                                "É possível que o resultado seja diferente do esperado!\n");
				    varExp += numReal;

				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				match(VAR);

				    if(varTabela.contemChave(_input.LT(-1).getText())){
				        varExp += _input.LT(-1).getText();
				        if(varTabela.getSimbolo(_input.LT(-1).getText()).getTipo() == Simbolo.INT && eVarInt == 0)
				            System.err.println("\nErro Semântico - Tentativa de atribuição de dado inteiro de " + 
				                                _input.LT(-1).getText() + " para variável real " + varAtrib + ".\n"+
				                                "O resultado pode ser diferente do esperado!\n");
				        else if(varTabela.getSimbolo(_input.LT(-1).getText()).getTipo() == Simbolo.REAL && eVarInt == 1)
				            System.err.println("\nErro Semântico - Tentativa de atribuição de dado real de " + 
				                                _input.LT(-1).getText() + " para variável inteira " + varAtrib + ".\n"+
